--- a/package.json
+++ b/package.json
@@ -38,12 +38,13 @@
     ]
   },
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@faker-js/faker": "^7.6.0",
     "@iconify/react": "^4.0.0",
+    "@mui/icons-material": "^5.10.9",
     "@mui/lab": "^5.0.0-alpha.103",
-    "@mui/material": "^5.10.9",
+    "@mui/material": "^5.10.13",
     "apexcharts": "^3.36.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
